CSS/style.css
/* ///// HEADER ///// */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 8rem;
  padding: 0 4.8rem;
  position: relative;
}

.logo {
  height: 4.8rem;
}

.main-nav-list {
  list-style: none;
  display: flex;
  align-items: center;
  gap: 4.8rem;
  margin-bottom: 0;
}

.main-link-nav:link,
.main-link-nav:visited {
  display: inline-block;
  text-decoration: none;
  color: #b2beed;
  font-weight: 500;
  font-size: 1.8rem;
  transition: all 0.3s;
}

.main-link-nav:hover,
.main-link-nav:active {
  color: #fb773c;
}

.main-link-nav.nav-cta:link,
.main-link-nav.nav-cta:visited {
  background-color: #fb773c;
  color: #251b43;
  padding: 1.2rem 1.6rem;
  border-radius: 8px;
}

.main-link-nav.nav-cta:hover,
.main-link-nav.nav-cta:active {
  background-color: #c95f30;
}

.course {
  color: rgba(107, 114, 142, 0.8) !important;
}

.course:hover {
  color: rgba(46, 204, 112, 0.85) !important;
}

/* MOBILE NAV */
.btn-mobile-nav {
  border: none;
  cursor: pointer;
  display: none;
  background: none;
}

.icon-mobile-nav {
  height: 4.8rem;
  width: 4.8rem;
  color: #b2beed;
}

.icon-mobile-nav[name="close-outline"] {
  display: none;
}

/* STICKY NAV */
.sticky .header {
  position: fixed;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 8rem;
  z-index: 999;
  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
  transition: background-color 0.3s ease;
}

.sticky .header.nav-dark {
  background-color: rgba(13, 2, 46, 0.95);
}

.sticky .header.nav-light {
  background-color: rgba(37, 27, 67, 0.95);
}

.sticky .section-hero {
  margin-top: 8rem;
}

/* ///// MAIN SECTION ///// */
/* KIM JESTEM */

.section-hero {
  padding: 4.8rem 0;
}

.hero-box {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 4.8rem;
}

.hero-text-box {
  padding: 8rem 0;
  display: flex;
  flex-direction: column;
  gap: 4.8rem;
}

.hero-description {
  font-size: 2.4rem;
}

.no-margin {
  margin-bottom: 1.2rem !important;
}

.hero-img-box {
  width: 80%;
  /* display: flex; */
  /* justify-content: space-around; */
  background-image: url(/img/Daniel.PNG);
  background-size: cover;
  background-position: center;
}

/* PO CO MI STRONA? */
.section-why {
  background-color: #251b43;
  padding: 9.6rem 0;
}

.content-bar {
  position: relative;
  margin: 0 auto 6.4rem auto;
  border-radius: 50px;
  border: 1px solid #b2beed;
  max-width: 80rem;
  background-color: rgba(13, 2, 46, 0.8);
}

.content-bar-list {
  margin: 0;
  padding: 0;
  font-size: 1.6rem;
  display: flex;
  justify-content: center;
  list-style: none;
  gap: 2.4rem;
}

.content-bar-list li {
  flex: 1;
}

.content-bar-link:link,
.content-bar-link:visited {
  position: relative;
  display: block;
  text-align: center;
  color: #b2beed;
  text-decoration: none;
  /* transition: all 0.3s ease; */
  padding: 2.2rem;
  z-index: 1;
}

.highlighter {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  background-color: #21183c;
  outline: 1px solid #b2beed;
  border-radius: 50px;

  transition: transform 0.4s ease-in-out;
}

.content-bar-link.active {
  color: #fff;
}

.content-box.hidden {
  display: none;
}

.content-box {
  box-shadow: 0 0 6.4rem rgba(251, 120, 60, 0.25);
  border-radius: 50px;
  padding: 6.4rem !important;
  background-color: #21183c;
}

.why-list {
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
  font-size: 1.8em;
  list-style: none;
  line-height: 1.35;
}

.content-box h2 {
  /* color: #7d85a6; */
  color: #6b728e;
}

.why-text {
  display: flex;
  gap: 1.2rem;
}

.why-text .bold {
  /* color: #7d85a6; */
  color: #6b728e;
}

/* PORTFOLIO */
.section-portfolio {
  justify-content: center;
  align-items: center;
  padding: 9.6rem 0;
}

.section-text {
  font-size: 1.6rem;
  padding: 0 3.2rem 8rem 0;
}

.icon-box p {
  font-size: 1.4rem;
  cursor: default;
}

.arrow-icon {
  fill: #b2beed;
  transform: rotate(-55deg);
}

.port-box {
  position: relative;
  height: 100%;
}

.icon-box {
  position: absolute;
  top: -3.5rem;
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
  display: flex;
  align-items: end;
  gap: 0.4rem;
}

.port-content {
  display: flex;
  border-radius: 30px;
  border: 5px solid rgba(251, 120, 60, 0.5);
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.port-img-box {
  flex: 1;
  cursor: pointer;
  overflow: hidden;
}

.port-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: all 0.4s;
}

.port-img:hover {
  transform: scale(1.04);
}

.port-content-box {
  padding: 1.6rem;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.heading-4 {
  font-size: 2rem;
  padding-bottom: 2.4rem;
  margin-bottom: 0;
}

.port-content-list {
  gap: 1.2rem;
  list-style: none;
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
}

.port-content-list p {
  margin-bottom: 0;
}

.port-text {
  font-size: 1.4rem;
  display: flex;
  align-items: center;
  gap: 0.8rem;
}

/* PORTFOLIO MODAL */
.body-no-scroll {
  overflow: hidden;
}

.modal-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
  display: none;
  justify-content: center;
  align-items: center;
}

.modal-container.is-visible {
  display: flex;
}

.modal-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(13, 2, 46, 0.85);
}

.modal-window {
  position: relative;
  background-color: #fff;
  border: 5px solid #924e67;
  border-radius: 30px;
  width: 85vw;
  height: 85vh;
  z-index: 1001;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.modal-close-btn {
  position: absolute;
  top: 1.6rem;
  right: 2rem;
  font-size: 3rem;
  font-weight: bold;
  color: #333;
  background: none;
  border: none;
  cursor: pointer;
  z-index: 1002;
}

.modal-content {
  width: 100%;
  height: 100%;
  overflow-y: auto;
}

.modal-image {
  width: 100%;
  height: auto;
  display: block;
}

.lazy-img {
  filter: blur(20px);
  transition: filter 0.5s;
}

/* PASEK CTA */
.section-cta-bar {
  height: 10rem;
  background-color: #924e67;

  display: flex;
  align-items: center;
  justify-content: space-around;
}

.cta-bar-content {
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.cta-bar-text {
  font-size: 2.4rem;
  margin-bottom: 0;
}

.cta-btn:link,
.cta-btn:visited {
  background-color: #fb773c;
  color: #251b43;
  padding: 1.2rem 1.6rem;
  border-radius: 8px;
  font-size: 1.6rem;
  font-weight: 500;
  border: none;
  text-decoration: none;
  transition: all 0.3s;
}

.cta-btn:hover,
.cta-btn:active {
  background-color: #c95f30;
}

/* NASZA WSPÓŁPRACA */
.section-collaboration {
  background-color: #251b43;
  justify-content: center;
  align-items: center;
  padding: 9.6rem 0 12.8rem 0;
}

.stage-number {
  font-size: 2.4rem;
  font-weight: 500;
  opacity: 0.75;
}

.stage-content {
  width: 19.2rem;
  height: 19.2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s;
  perspective: 1000px;
}

.stage-content p {
  font-size: 1.4rem;
}

.card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.stage-content.is-flipped .card-inner {
  transform: scale(1.5) rotateY(180deg);
}

.card-front,
.card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  border-radius: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 1rem;
}

.card-front {
  background-color: #924e67;
  color: inherit;
}

.card-back {
  background-color: #924e67;
  color: inherit;
  border: 2px solid rgba(251, 120, 60, 0.5);
  transform: rotateY(180deg);
}

/* OPINIE */
.section-feedback {
  padding: 9.6rem 0;
}

.feedback-box {
  padding: 2.4rem;
  height: 30rem;
  overflow: scroll;
}

.feedback-text {
  font-size: 1.8rem;
  line-height: 1.8;
  margin-bottom: 1.6rem;
}

.feedback-name {
  font-size: 1.6rem;
  color: #fb773c;
}

/* FORMULARZ */
.section-cta {
  padding: 9.6rem 0;
  background-color: #251b43;
}

.cta {
  box-shadow: 0 0 6.4rem rgba(251, 120, 60, 0.25);
  background-color: #21183c;
  border-radius: 50px;
  overflow: hidden;
}

.cta .heading-primary {
  margin-bottom: 3.2rem;
}

.cta-text-box {
  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
  /* color: #6b728e; */
}

.cta-text {
  font-size: 1.8rem;
  line-height: 1.8;
  margin-bottom: 4.8rem;
}

.cta-form {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 3.2rem;
  row-gap: 2.4rem;
}

.cta-form label {
  display: block;
  font-size: 1.6rem;
  font-weight: 500;
  margin-bottom: 1.2rem;
}

.cta-form input,
.cta-form select,
.cta-form textarea {
  width: 100%;
  padding: 1.2rem;
  font-size: 1.6rem;
  font-family: inherit;
  /* color: inherit; */
  color: #aaa;
  border: none;
  background-color: #e4e0e1;
  border-radius: 9px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  cursor: pointer;
}

.cta-form input::placeholder,
.cta-form textarea::placeholder {
  color: #aaa;
}

/* .cta *:focus {
  outline: none;
  box-shadow: 0 0 0 0.4rem rgba(253, 242, 233, 0.5);
} */

.btn-form {
  background-color: #fb773c;
  margin-top: 2.8rem;
  font-size: 1.8rem;
  font-weight: 600;
  cursor: pointer;
  color: #251b43;
  border-radius: 9px;
}

.btn-form:hover {
  background-color: #c95f30;
  color: #251b43;
}

/* FOOTER */
.footer {
  padding: 6.4rem 0;
  background-color: #924e67;
}

.footer-content {
  display: flex;
  flex-direction: column;
  gap: 6.4rem;
}

.col-1,
.col-2,
.col-3,
.col-4 {
  width: 100%;
  display: flex;
  justify-content: center;
  font-size: 1.8rem;
  font-weight: 500;
}

.col-1 {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.foot-name {
  font-size: 3rem;
}

.col-2 .main-nav-list {
  padding: 0;
  gap: 0;
}

.col-2 .main-nav-list li {
  margin: 0 2.4rem;
}

.col-2 .main-nav-list li:not(:first-child)::before {
  content: "|";
  color: #b2beed;
  opacity: 0.75;
  margin-right: 4.4rem;
}

.col-3 {
  margin: 2.4rem 0 1.2rem 0;
  display: flex;
  gap: 0.8rem;
}

.mail-cta {
  background-color: #fb773c;
  color: #251b43;
  padding: 1.2rem 1.6rem;
  border-radius: 8px;
  text-decoration: none;
  transition: all 0.3s;
}

.col-3 a:hover {
  background-color: #c95f30;
}

.col-4 a:link,
.col-4 a:visited {
  color: inherit;
}

.col-4 .main-nav-list {
  width: 100%;
  display: flex;
  justify-content: space-around;
}

.col-4 p {
  font-size: 1.4rem;
}

.col-4 a {
  text-decoration: none;
}

.footer-links-box {
  display: flex;
  gap: 2.4rem;
}

.footer-links-box .course {
  color: inherit !important;
  text-decoration: underline;
}

